# OfflineTests

./: .env.example  .gitignore  Cargo.toml  next.config.js  package-lock.json  package.json  setup.bat  structure.json  tailwind.config.js  vercel.json
api/: Cargo.toml
api/.sqlx/: query-2694804128c6c76442c1e83d73d63d3116d3c27ab0ca14e554410c4bf0a55efb.json  query-7c0d19192d24c9f95a467f34f66ac1cf06dd8d660259b757d2d9af71a2515354.json  query-ce121df239654750fea2a563bb317bafdd4f7846b07f998698e2a97a697f6ecd.json
api/admin/: flush.rs
api/test/: create.rs  fetch.rs  submit.rs
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/(auth)/login/: page.tsx
app/(auth)/register/: page.tsx
app/admin/: page.tsx
app/admin/components/: ActivityLog.tsx  MetricsCard.tsx  ServerLoad.tsx
app/api/health/: route.ts
app/correction/[submissionId]/: page.tsx
app/correction/components/: BurningTimer.tsx  GradingPanel.tsx  ScoreCalculator.tsx  ScorePanel.tsx
app/editor/: page.tsx
app/editor/components/: KaTeXBlock.tsx  MathToolbar.tsx  QuestionForm.tsx  TestPreview.tsx
app/exam/[code]/: page.tsx
app/exam/components/: CountdownTimer.tsx  FullscreenToggle.tsx  OfflineIndicator.tsx  QuestionNav.tsx
app/reports/student/[submissionId]/: page.tsx
app/reports/teacher/[testId]/: page.tsx
components/layout/: Header.tsx  OfflineBanner.tsx  Sidebar.tsx
components/pdf/: ReportTable.tsx  StudentReport.tsx  TeacherReport.tsx
components/security/: EncryptionStatus.tsx  SuspiciousActivity.tsx  TabMonitor.tsx
components/ui/: Button.tsx  Card.tsx  LoadingSpinner.tsx  Modal.tsx  Toast.tsx
lib/: encryption.ts  indexedDB.ts
lib/hooks/: useAutoSave.ts  useOffline.ts
lib/pdf/: generateStudentReport.ts  generateTeacherReport.ts
lib/supabase/: client.ts  queries.ts  types.ts
lib/time/: monotonic.ts  timer.ts
lib/validation/: antiCheat.ts  schema.ts
migrations/: 001_initial_schema.sql  002_add_triggers.sql  003_add_indexes.sql
types/: test.ts
