[package]
name = "offlinetests-api"
version = "1.0.0"
edition = "2021"

[dependencies]
vercel_runtime = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1