[package]
name = "offlinetests-api"
version = "1.0.0"
edition = "2021"

[dependencies]
vercel_runtime = "1.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Explicitly define each API function as a binary target
[[bin]]
name = "create"
path = "test/create.rs"

[[bin]]
name = "fetch"
path = "test/fetch.rs"

[[bin]]
name = "submit"
path = "test/submit.rs"

[[bin]]
name = "flush"
path = "admin/flush.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1